jumping height fixed

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -605,52 +605,9 @@ html {
   font-size: 16px;
 }
 
-@media (max-width:1800px) {
-  html {
-    font-size: 15px;
-  }
-}
-
-@media (max-width:1600px) {
-  html {
-    font-size: 14px;
-  }
-}
-
-@media (max-width:1400px) {
-  html {
-    font-size: 15px;
-  }
-}
-
-@media (max-width:1200px) {
-  html {
-    font-size: 14px;
-  }
-}
-
-@media (max-width:1024px) {
-  html {
-    font-size: 13px;
-  }
-}
-
-@media (max-width:800px) {
-  html {
-    font-size: 12px;
-  }
-}
-
-@media (max-width:600px) {
-  html {
-    font-size: 11px;
-  }
-}
-
 body,
 html {
-  min-width: 100%;
-  min-height: 100%;
+  min-height: 100vh;
   width: 100%;
   font-family: "Open sans",sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -762,8 +719,10 @@ ul {
 .glimpse {
   z-index: 5;
   position: fixed;
-  width: 100vw;
-  height: 100vh;
+  min-width: 100vw;
+  min-height: 100vh;
+  max-width: 100%;
+  max-height: 100%;
   left: 0;
   top: 0;
   background: #242424;
@@ -816,7 +775,7 @@ header {
 }
 
 header #logo-nav {
-  position: fixed;
+  position: absolute;
   top: 1rem;
   left: 2rem;
   font-size: 4rem;
@@ -837,7 +796,7 @@ header #logo-nav:hover {
 }
 
 header #menu-main {
-  position: fixed;
+  position: absolute;
   top: 1rem;
   z-index: 2;
   right: 2rem;
@@ -932,10 +891,12 @@ footer {
   -webkit-box-align: end;
   -ms-flex-align: end;
   align-items: flex-end;
+  position: relative;
   font-size: 4em;
 }
 
 small {
+  position: relative;
   word-spacing: .4em;
   text-transform: capitalize;
   font-size: .8rem;
@@ -953,7 +914,7 @@ footer #menu-media {
   height: 4rem;
   border-radius: 50%;
   border: dashed .025em #b1b1b1;
-  position: fixed;
+  position: absolute;
   bottom: 1rem;
   right: 2rem;
   z-index: 1;
@@ -1062,6 +1023,16 @@ nav#media-items ul li.gitHub {
 nav#media-items ul li.codePen {
   -webkit-transform: rotate(-60deg);
   transform: rotate(-60deg);
+}
+
+@media (min-width:1024) {
+  header #logo-nav {
+    position: fixed;
+  }
+
+  header #menu-main {
+    position: fixed;
+  }
 }
 
 .glimpse .loader {
@@ -1191,8 +1162,9 @@ nav#media-items ul li.codePen {
 }
 
 .row {
+  position: relative;
   min-height: calc(100vh - 10rem);
-  width: 0;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1200,7 +1172,15 @@ nav#media-items ul li.codePen {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+}
+
+.row-bg {
   background: #333;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 
 #about-main {
@@ -1233,7 +1213,7 @@ nav#media-items ul li.codePen {
   position: relative;
   margin-top: 4rem;
   font-family: "Archivo Black",sans-serif;
-  font-size: 6vw;
+  font-size: 12vw;
   letter-spacing: .3rem;
   text-transform: uppercase;
 }
@@ -1329,8 +1309,9 @@ nav#media-items ul li.codePen {
   text-align: right;
   letter-spacing: .1rem;
   word-spacing: .2rem;
-  margin-top: 1rem;
-  max-height: 2rem;
+  line-height: 1.2rem;
+  margin-top: 1.2rem;
+  max-height: 3rem;
   overflow: hidden;
 }
 
@@ -1343,7 +1324,6 @@ nav#media-items ul li.codePen {
 #about-right-panel {
   width: 100%;
   min-height: 100%;
-  background: #333;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1368,10 +1348,15 @@ nav#media-items ul li.codePen {
   overflow: hidden;
   width: 100%;
   border-radius: 2rem 0 2rem 0;
+  opacity: 0;
 }
 
 .img-wrapper img {
   width: 100%;
+  display: none;
+}
+
+.img-wrapper img.mobile {
   display: block;
 }
 
@@ -1383,10 +1368,8 @@ nav#media-items ul li.codePen {
   height: 100%;
   opacity: .3;
   top: 0;
-  left: 0;
+  left: 3px;
   background: url(../images/about.jpg) center/cover;
-  -webkit-animation: glitch-effect 1.2s steps(10,end) infinite alternate;
-  animation: glitch-effect 1.2s steps(10,end) infinite alternate;
 }
 
 .glitch {
@@ -1426,6 +1409,7 @@ nav#media-items ul li.codePen {
 
 @media (min-width:1024px) {
   body#about .row {
+    width: 95%;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -ms-flex-direction: row;
@@ -1435,11 +1419,19 @@ nav#media-items ul li.codePen {
     justify-content: space-between;
   }
 
+  body#about .row-bg {
+    width: 0;
+  }
+
   body#about #about-main {
     width: 55%;
-    -webkit-box-align: end;
-    -ms-flex-align: end;
-    align-items: flex-end;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+  }
+
+  body#about #about-main .main-title-wrapper {
+    font-size: 6vh;
   }
 
   body#about #about-right-panel {
@@ -1450,7 +1442,15 @@ nav#media-items ul li.codePen {
   }
 
   body#about .img-wrapper-outer {
-    width: 100%;
+    width: 60%;
+  }
+
+  body#about .img-wrapper img {
+    display: block;
+  }
+
+  body#about .img-wrapper img.mobile {
+    display: none;
   }
 }
 
