--- a/src/sass/base/_all.scss
+++ b/src/sass/base/_all.scss
@@ -9,7 +9,7 @@
 html {	
 	font-size: 16px;
 	
-	@media (max-width: 1800px){
+/* 	@media (max-width: 1800px){
 		font-size: 15px;
 	}	
 	@media (max-width: 1600px){
@@ -29,13 +29,12 @@ html {
 	}	
 	@media (max-width: 600px){
 		font-size: 11px;
-	}	
+	}	 */
 }
 
 html,
 body {
-  min-width: 100%;
-	min-height: 100%;
+	min-height: 100vh;
 	width: 100%;
 	font-family: "Open sans", sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -130,8 +129,10 @@ ul {
 .glimpse {
   z-index: 5;
   position: fixed;
-  width: 100vw;
-  height: 100vh;
+  min-width: 100vw;
+	min-height: 100vh;
+	max-width: 100%;
+	max-height: 100%;
   left: 0;
   top: 0;
   background: $darker-background;
@@ -175,7 +176,7 @@ header {
  
 }
 header #logo-nav {
-	position: fixed;
+	position: absolute;
 	top: 1rem;
 	left: 2rem;
 	font-size: 4rem;
@@ -192,7 +193,7 @@ header #logo-nav {
   }
 }
 header #menu-main {
-	position: fixed;
+	position: absolute;
   top: 1rem;
 	z-index: 2;
   right: 2rem;
@@ -269,10 +270,12 @@ footer {
 	min-height: 4rem;
   padding: 1rem 2rem;
   justify-content: space-between;
-  align-items: flex-end;
+	align-items: flex-end;
+	position: relative;
   font-size: 4em;
 }
 small {
+	position: relative;
 	word-spacing: .4em;
   text-transform: capitalize;
 	font-size: .8rem;
@@ -292,7 +295,7 @@ footer #menu-media {
   height: 4rem;
   border-radius: 50%;
   border: dashed 0.025em $darker-white;
-  position: fixed;
+  position: absolute;
   bottom: 1rem;
   right: 2rem;
   z-index: 1;
@@ -395,3 +398,12 @@ nav#media-items ul{
 
 }
 
+/* Responsive styles */
+@media (min-width: 1024){
+	header #logo-nav {
+		position: fixed;
+	}
+	header #menu-main{
+		position: fixed;
+	}
+}
